fix(SearchSection): correct spacing of movie search input

--- a/src/components/SearchSection.module.css
+++ b/src/components/SearchSection.module.css
@@ -29,12 +29,18 @@
   align-items: center;
   margin-bottom: var(--space-xs);
   background-color: var(--color-background-input);
-  padding: var(--space-2xs) var(--space-xs);
   box-shadow: 1px 1px 4px 0.5px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+
+.inputWrapper input {
+  height: 100%;
+  width: 100%;
+  padding: var(--space-2xs) var(--space-xs);
 }
 
 .searchIcon {
   font-size: 15px;
   --ionicon-stroke-width: 40px;
+  padding: 0 var(--space-xs);
 }
